--- a/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
+++ b/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
@@ -30,8 +30,10 @@ npx nx run twenty-server:lint # pass --fix to fix lint errors
 ### Test
 
 ```
-npx nx run twenty-server:test:unit
+npx nx run twenty-server:test:unit          # run unit tests
+npx nx run twenty-server:test:integration   # run integration tests
 ```
+Note : you can run `npx nx run twenty-server:test:integration:with-db-reset` in case you need to reset the database before running the integration tests.
 
 ### Resetting the database
 
