Improve docker compose (#8637)
Add a proxy script to use the right install.sh branch/version matching
the docker-compose

Also stop exposing redis publicly as it's not necessary

--- a/packages/twenty-website/src/content/developers/self-hosting/docker-compose.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/docker-compose.mdx
@@ -31,7 +31,7 @@ bash <(curl -sL https://git.new/20)
 
 To install a specific version or branch:
 ```bash
-VERSION=x.y.z BRANCH=branch-name bash <(curl -sL https://git.new/20)
+VERSION=vx.y.z BRANCH=branch-name bash <(curl -sL https://git.new/20)
 ```
 - Replace x.y.z with the desired version number.
 - Replace branch-name with the name of the branch you want to install.
