--- a/packages/twenty-website/src/content/developers/local-setup.mdx
+++ b/packages/twenty-website/src/content/developers/local-setup.mdx
@@ -5,7 +5,7 @@ image: /images/user-guide/fields/field.png
 info: Mostly for contributors or curious developers
 ---
 
-Follow this guide if you would like to setup the project locally to contribute.
+Follow this guide if you would like to set up the project locally to contribute.
 
 ## Prerequisites
 
@@ -225,7 +225,7 @@ Start your redis server:
 </ArticleTabs>
 
 
-Setup your database with the following command:
+Set up your database with the following command:
 ```bash
 npx nx database:reset twenty-server
 ```
@@ -246,47 +246,8 @@ Twenty's server will be up and running at [http://localhost:3000](http://localho
 
 Twenty's frontend will be running at [http://localhost:3001](http://localhost:3001). Just log in using the seeded demo account: `tim@apple.dev` (password: `Applecar2025`) to start using Twenty.
 
-
 ## Troubleshooting
 
-#### CR line breaks found [Windows]
-
-This is due to the line break characters of Windows and the git configuration. Try running:
-
-```
-git config --global core.autocrlf false
-```
-
-Then delete the repository and clone it again.
-
-#### Missing metadata schema
-
-During Twenty installation, you need to provision your postgres database with the right schemas, extensions, and users.
-If you're successful in running this provisioning, you should have `default` and `metadata` schemas in your database.
-If you don't, make sure you don't have more than one postgres instance running on your computer.
-
-#### Cannot find module 'twenty-emails' or its corresponding type declarations.
-
-You have to build the package `twenty-emails` before running the initialization of the database with `npx nx run twenty-emails:build`
-
-#### Missing twenty-x package
-
-Make sure to run yarn in the root directory and then run `npx nx server:dev twenty-server`. If this still doesn't work try building the missing package manually.
-
-#### Lint on Save not working
-
-This should work out of the box with the eslint extension installed. If this doesn't work try adding this to your vscode setting (on the dev container scope):
-
-#### While running `npx nx start` or `npx nx start twenty-front`, Out of memory error is thrown
-
-In `packages/twenty-front/.env` uncomment `VITE_DISABLE_TYPESCRIPT_CHECKER=true` and `VITE_DISABLE_ESLINT_CHECKER=true` to disable background checks thus reducing amount of needed RAM.
-
-```
-"editor.codeActionsOnSave": {
-
-  "source.fixAll.eslint": "explicit"
-
-}
-```
+If you encounter any problem, check [Troubleshooting](https://twenty.com/developers/section/self-hosting/troubleshooting) for solutions.
 
 <ArticleEditContent></ArticleEditContent>
