--- a/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
@@ -51,9 +51,24 @@ This should work out of the box with the eslint extension installed. If this doe
 
 In `packages/twenty-front/.env` uncomment `VITE_DISABLE_TYPESCRIPT_CHECKER=true` and `VITE_DISABLE_ESLINT_CHECKER=true` to disable background checks thus reducing amount of needed RAM.
 
+**If it does not work:**  
+Run only the services you need, instead of `npx nx start`. For instance, if you work on the server, run only `npx nx worker twenty-server`
+
+**If it does not work:**  
+Investigate which processes are taking you most of your machine RAM. At Twenty, we noticed that some VScode extensions were taking a lot of RAM so we temporarily disable them. 
+
+**If it does not work:**  
+Restart your machine helps to clean up ghost processes.
+
 #### While running `npx nx start` there are weird [0] and [1] in logs
 
 That's expected as command `npx nx start` is running more commands under the hood
+
+#### No emails are sent
+Most of the time, it's because the `worker` is not running in the background. Try to run 
+```
+npx nx worker twenty-server
+```
 
 #### While running `yarn` warnings appear in console
 
