Add no-seed configuration to database:reset (#9112)
Based on feedback here:
https://github.com/twentyhq/twenty/issues/9109#issuecomment-2550198035

--- a/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
+++ b/packages/twenty-website/src/content/developers/backend-development/server-commands.mdx
@@ -37,7 +37,7 @@ Note : you can run `npx nx run twenty-server:test:integration:with-db-reset` in 
 
 ### Resetting the database
 
-If you want to reset the database, you can run the following command:
+If you want to reset and seed the database, you can run the following command:
 
 ```bash
 npx nx run twenty-server:database:reset
