--- a/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
@@ -20,11 +20,21 @@ If you used Docker Compose, follow these steps:
 
 ## Version-specific upgrade steps
 
-### v0.34.0 to v0.40.0
+### v0.34.0 to v0.35.0
+
+Upgrade your Twenty instance to use v0.35.0 image
+
+```
+yarn database:migrate:prod
+yarn command:prod upgrade-0.35
+```
+
+The `yarn database:migrate:prod` command will apply the migrations to the database structure (core and metadata schemas)
+The `yarn command:prod upgrade-0.35` takes care of the data migration of all workspaces.
+
+**Environment Variables**
 
 - We replaced `ENABLE_DB_MIGRATIONS` with `DISABLE_DB_MIGRATIONS` (default value is now `false`, you probably don't have to set anything)
-
-
 
 ### v0.33.0 to v0.34.0
 
