Add backup commands to documentation (#9224)
In documentation, there's mention to make a backup of database before
upgrading Twenty but there are no commands how to do it, so this PR
solves this problem by providing commands

--- a/packages/twenty-website/src/content/developers/frontend-development/hotkeys.mdx
+++ b/packages/twenty-website/src/content/developers/frontend-development/hotkeys.mdx
@@ -73,7 +73,7 @@ const PageListeningEnter = () => {
 
 ### Listening to hotkeys in a modal-type component
 
-For this example we'll use a modal component that listens for the Escape key to tell it's parent to close it.
+For this example we'll use a modal component that listens for the Escape key to tell its parent to close it.
 
 Here the user interaction is changing the scope.
 
