fix : Update local setup doc (#9383)
Co-authored-by: Etienne Jouan <etiennejouan@MacBook-Pro-de-Etienne.local>

--- a/packages/twenty-website/src/content/developers/local-setup.mdx
+++ b/packages/twenty-website/src/content/developers/local-setup.mdx
@@ -151,7 +151,7 @@ You should run all commands in the following steps from the root of the project.
   </ArticleTab>
 </ArticleTabs>
 
-You can now access the database at [localhost:5432](localhost:5432), with user `twenty` and password `twenty` .
+You can now access the database at [localhost:5432](localhost:5432), with user `postgres` and password `postgres` .
 
 ## Step 4: Set up a Redis Database (cache)
 Twenty requires a redis cache to provide the best performance
