--- a/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
@@ -70,6 +70,10 @@ Most of the time, it's because the `worker` is not running in the background. Tr
 npx nx worker twenty-server
 ```
 
+#### Cannot connect my Microsoft 365 account
+
+Most of the time, it's because your admin has not enabled the Microsoft 365 Licence for your account. Check [https://admin.microsoft.com/](https://admin.microsoft.com/Adminportal/Home).
+
 #### While running `yarn` warnings appear in console
 
 Warnings are informing about pulling additional dependencies which aren't explicitly stated in `package.json`, so as long as no breaking error appears, everything should work as expected.
